<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.juniorgallery.customview.CustomAppBar
        android:id="@+id/ablUserSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:app_bar_type="type_cancel"
        app:app_bar_end_icon="@drawable/icon_save"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ablUserSettings"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUserSettingsPicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/dimass"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPersonalData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/personal_data"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/civUserSettingsPicture" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                style="@style/StyledTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/username_settings"
                app:layout_constraintTop_toBottomOf="@id/tvPersonalData">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_person"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBirthday"
                style="@style/StyledTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tilUserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_calendar"
                    android:hint="@string/birthday"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/email_settings"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilBirthday" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/StyledTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tvEmailAdress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/icon_email"
                    android:hint="@string/email_change_settings"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/password_settings"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOldPassword"
                style="@style/StyledTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tvPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/old_password_settings"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPassword"
                style="@style/StyledTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tilOldPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundTint="@color/black"
                    android:hint="@string/new_password_settings"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmNewPassword"
                style="@style/StyledTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/tilNewPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/delete_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilConfirmNewPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="86dp"
                android:text="@string/sign_out"
                android:textColor="@color/pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDeleteAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>