<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/btnHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/have_account"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>