<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.juniorgallery.customview.CustomAppBar
            android:id="@+id/ablRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:app_bar_type="type_cancel"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ablRegistration" />

        <View
            android:id="@+id/view"
            android:layout_width="105dp"
            android:layout_height="2dp"
            android:background="@color/pink"
            app:layout_constraintBottom_toBottomOf="@+id/tvSignUp"
            app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
            app:layout_constraintStart_toStartOf="@+id/tvSignUp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            style="@style/StyledTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/icon_person"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBirthday"
            style="@style/StyledTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tilUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/icon_calendar"
                android:hint="@string/birthday"
                android:inputType="date"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailRegistration"
            style="@style/StyledTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tilBirthday">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/icon_email"
                android:hint="@string/email_sign_up"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordSignUp"
            style="@style/StyledTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tilEmailRegistration"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_sign_up"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/StyledTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tilPasswordSignUp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm_sign_up"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToSignIn"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>