<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.juniorgallery.customview.CustomAppBar
        android:id="@+id/ablLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:app_bar_type="type_cancel"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ablLogin"/>

    <View
        android:id="@+id/view"
        android:layout_width="95dp"
        android:layout_height="2dp"
        android:background="@color/pink"
        app:layout_constraintBottom_toBottomOf="@+id/tvSignIn"
        app:layout_constraintEnd_toEndOf="@+id/tvSignIn"
        app:layout_constraintStart_toStartOf="@+id/tvSignIn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserNameLogin"
        style="@style/StyledTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/icon_person"
            android:hint="@string/username_sign_in"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordLogin"
        style="@style/StyledTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tilUserNameLogin"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundTint="@color/black"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvToSignUp"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>