<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.juniorgallery.customview.CustomAppBar
        android:id="@+id/ablAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:app_bar_end_icon="@drawable/icon_add_title"
        app:app_bar_type="type_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ablAddPhoto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="match_parent"
                android:layout_height="376dp"
                app:cardBackgroundColor="@color/gray"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/icon_add" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/StyledTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@id/cvImage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/StyledTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/scNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/switch_new"
                android:textSize="20sp"
                android:theme="@style/SwitchColorStyle"
                app:layout_constraintTop_toBottomOf="@id/tilDescription" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/scPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/switch_popular"
                android:textSize="20sp"
                android:theme="@style/SwitchColorStyle"
                app:layout_constraintTop_toBottomOf="@id/scNew" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>